Prussia gfx icons

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -701,7 +701,7 @@
   PB_PRS_A_New_Path:0 "A New Path"
   PB_PRS_A_New_Path_desc:0 "With the ideas of the younger Junkers firmly embedded in our cause, it's time we follow up and finish what we set out to do when we gained independence from Russia before Bouhler pulled his stunt, and that is to make Prussia a constitutional monarchy along the lines of those of Britain and Germany."
   PB_PRS_The_First_Citizens:0 "The First Citizens"
-  PB_PRS_The_First_Citizens_desc:0 ""
+  PB_PRS_The_First_Citizens_desc:0 "Now that we have mostly settled the matters of Junker restoration, we should take a moment to thank Ernst Junger and Friedrich Olbricht, two men who were crucial in helping end Bouhler's malarkey. As such, we will hold a great ceremony in Konigsburg where King Friedrich will proclaim Junger and Olbricht as "First Citizens of Prussia", a title that will bestow upon them great prestige within the state, as these heroes so deserve for their actions."
   PB_PRS_Promote_Shared_Heritage:0 "Promote Shared Heritage"
   PB_PRS_Promote_Shared_Heritage_desc:0 ""
   PB_PRS_Revert_The_Great_Rot:0 "Revert The Great Rot"
@@ -783,17 +783,17 @@
   PB_PRS_Liberation_Through_Dedication:0 "Liberation Through Dedication"
   PB_PRS_Liberation_Through_Dedication_desc:0 ""
   PB_PRS_Imprison_Radical_Agitators:0 "Imprison Radical Agitators"
-  PB_PRS_Imprison_Radical_Agitators_desc:0 ""
+  PB_PRS_Imprison_Radical_Agitators_desc:0 "With King Friedrich at the helm of out nation the time has come to rid this country of Bouhler's destructive influence. Ever flag, banner, and symbol of his regime will be undone. His influence over Prussia has come to a decisive end, let us remove his lackeys from their posts and fill these empty desks with good loyal men. "
   PB_PRS_Secure_The_State:0 "Secure The State"
-  PB_PRS_Secure_The_State_desc:0 ""
+  PB_PRS_Secure_The_State_desc:0 "Vast swaths of our military are loyal to Bouhler's cause, if we wish to do away with this perverted tyrant then we must strike deep at the heart of his nationalist machine. As of today the Prussian army will be stood down and will undergo a period of immense reformation, this may leave us vulnerable but what other option do we have."
   PB_PRS_What_Could_Have_Been:0 "What Could Have Been"
-  PB_PRS_What_Could_Have_Been_desc:0 ""
+  PB_PRS_What_Could_Have_Been_desc:0 "It is important that we remind ourselves of what could have been, if Bouhler managed to secure unquestionable authority over Prussia then only a nightmare of goverance would have been left. Imperial rule may be an unwelcome change, but it is a necessary one."
   PB_PRS_Banish_Dissidents:0 "Banish Dissidents"
-  PB_PRS_Banish_Dissidents_desc:0 ""
+  PB_PRS_Banish_Dissidents_desc:0 "There are those who wish to provoke our security forces by mass protest and armed insurrection, it is time we dealt with this wrongdoers permanently."
   PB_PRS_Never_Again:0 "Never Again"
-  PB_PRS_Never_Again_desc:0 ""
+  PB_PRS_Never_Again_desc:0 "Whilst it is neccesary for us to stamp out the influence of Bouhler it is equally as important to us to study exactly how Bouhler came to power so that we can prevent this from ever happening again."
   PB_PRS_The_Enemy_Of_My_Enemy:0 "The Enemy Of My Enemy"
-  PB_PRS_The_Enemy_Of_My_Enemy_desc:0 ""
+  PB_PRS_The_Enemy_Of_My_Enemy_desc:0 "Democracy is a fickle thing, whilst it could in theory allow for another reactionary takeover, the benefits of allowing certain parties to run cannot be understated. Especially those whom were targeted by Bouhler and his goons."
   PB_PRS_Imperial_Militias:0 "Imperial Militias"
   PB_PRS_Imperial_Militias_desc:0 ""
   PB_PRS_The_Kingdom_Is_Whole:0 "The Kingdom Is Whole"
