--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -21,8 +21,12 @@
   PM_AME_American_BAF_Investment:0 "Promote Trade With The British African Authority"
   PM_AME_American_East_Africa_Investment:0 "Reinforce American Interests In East Africa"
   PM_AME_American_Acadiana_Investment:0 "Secure Our Influence In Acadia"
+  PM_AME_American_Acadiana_Investment_desc:0 "Acadia is our greatest ally in America. More then 90% of their trade comes from us binding their future to ours. Britian shall never get a chance to influence them again."
   PM_AME_American_Decry_Hibernia_Annexation:0 "Decry the Annexation of Ireland"
   PM_AME_American_Decry_Hibernia_Annexation_desc:0 "Hibernia has been betrayed. After years of mismanagement and discrimination by London towards the Irish, the unavoidable happened. An uprising.\nWe withheld our support to both sides and hoped for a quick end to the violent conflict. We expected a new approachment from London towards Ireland after the conflict, especially in the light that the Dublin Government showed their loyalty to the Confederation.\nBut the British Expansionists have used this chance to restablish complete authority over Ireland. It seems like even their closest neighbours will never be equal. How long until they come for us? "
+
+  PM_AME_American_Acadiana_Binding:0 "Binding Acadia to America"
+  PM_AME_American_Acadiana_Binding_desc:0 "Acadia will always stay in our sphere of influence ... and maybe even more"
 
   PM_ENG_Promote_Anglo_Irish_Unity:0 "Promote Anglo-Irish Unity"
   PM_ENG_Trade_with_Quebec:0 "Offer Economic Incentives To Quebec"
@@ -235,8 +239,8 @@
   ImpCiv_War.5.d:0 "The Saharan Commonwealth of Carnegia, formerly a strong ally of the American sphere, has been successfully integrated into the Imperial Federation."
   ImpCiv_War.5.a:0 "Good to hear."
 
-  ImpCiv_War.6.t:0 "Acadiana Integrated"
-  ImpCiv_War.6.d:0 "The former French territory of Acadiana has been successfully integrated into the Imperial Federation."
+  ImpCiv_War.6.t:0 "Acadia Integrated"
+  ImpCiv_War.6.d:0 "The former French territory of Acadia has been successfully integrated into the Imperial Federation."
   ImpCiv_War.6.a:0 "Excellent."
 
   ImpCiv_War.7.t:0 "Victoria Integrated"
@@ -297,8 +301,11 @@
   PB_ImpMan_Increase_BEF_AME_Influence_tt:0 "East Africa will become more §bAmerican Aligned§!"
   PB_ImpMan_Increase_BEF_ENG_Influence_tt:0 "East Africa will become more §rBritish Aligned§!"
 
-  PB_ImpMan_Increase_ACD_AME_Influence_tt:0 "Acadiana will become more §bAmerican Aligned§!"
-  PB_ImpMan_Increase_ACD_ENG_Influence_tt:0 "Acadiana will become more §rBritish Aligned§!"
+  PB_ImpMan_Increase_ACD_AME_Influence_tt:0 "Acadia will become more §bAmerican Aligned§!"
+  PB_ImpMan_Increase_ACD_ENG_Influence_tt:0 "Acadia will become more §rBritish Aligned§!"
+
+  ENG_ACD_Blocked_tt:0 "§rBritian§! will be §Rblocked§! from further influencing Acadia"
+  ENG_ACD_Blocked_explain_tt:0 "§YNot:§! Acadia is §Rbound§! to §bAmerica§!"
 
   AME_Impending_Imperial_Civil_War_tt:0 "A series of events will fire which will eventually kickstart the §RImperial Civil War§!.\n\nAmerican aligned states will form a counter faction against Britain, America only needs to secure the eastern seaboard and hold out for one year for a scripted peace to fire, alternatively America can invade Britain where should they be succesful they can demand additional territories."
 
