Ongoing Russia Work

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -476,10 +476,12 @@
   PB_Complete_Siberian_Plan_desc:0 "At long last, after years of hard work, the greatest project the Russian Empire has ever attempted has been completed. The Siberian Plan, a plan to develop Siberia into a land equivalent to that of Western Russia, has finally been completed, and we can finally reap the vast land of the East to its fullest."
 
   PB_RUS_Create_Gosplan:0 "Create Gosplan"
+  PB_RUS_Create_Gosplan_desc:0 "The Russian economy, as to be expected for a nation of its size, is all over the place. However, as we work on modernizing our economy, we have an important issue to fix as quickly as we can. That issue is the decentralization of the Russian economy, a thing of the past that puts strain on our efforts.\n\nWe can no longer abide such a hamper on our work. As such, the Duma has authorized the founding of Gosplan, or the Central Planning Administration, to oversee the centralization of our economy as we move forward on modernization."
   PB_Reorganize_Ukrainian_Grain:0 "Reorganize Ukrainian Grain Management"
   PB_Work_with_Kulaks:0 "Cooperate with Ukrainian Kulaks"
   PB_RUS_Increase_Military_Budget:0 "Increase the Military Budget"
   PB_RUS_Integrate_Unions:0 "Integrate the Unions"
+  PB_RUS_Integrate_Unions_desc:0 "Although some radicals may seek to turn worker's organizations into agents of chaos, when held on a tight leash they can be extremely beneficial to society. Unions that are willing to cooperate with the government will be given protections, and with a newly created labor bureau, an official channel of negotiations is opened to solve diputes in an orderly manner."
   PB_RUS_Focus_on_Metropolitan_Russia:0 "Focus on Metropolitan Russia"
   PB_RUS_First_Five_Year_Plan:0 "Propose the First Five Year Plan"
   PB_RUS_Economic_Integrate_Poland:0 "Economic Integration with Poland"
@@ -489,7 +491,9 @@
 
   PB_RUS_Break_Ground_in_Alaska:0 "Break Ground in Alaska"
   PB_RUS_Laying_Pipe:0 "Laying Some Pipe"
+  PB_RUS_Laying_Pipe_desc:0 "There are many markets to which Russian oil can be exported for profit, but none are as lucrative as the so called "wild west", the untamed frontier of North America. The only problem: distribution. All we need to do is create a pipeline capable of funneling large amounts of natural gas to the western coast of the continent, and a whole new world of trade will created for us. The first leg of construction will start in our Alaskan colony."
   PB_RUS_Expand_Alaskan_Pipeline:0 "Expand the Trans-American Pipeline"
+  PB_RUS_Expand_Alaskan_Pipeline_desc:0 "Now that the foundations are in place, our oil supply network can grown exponentially until it encompasses the entirety of North America. It is finally time to realize Russia's dreams of energy dominance!"
   PB_RUS_Establish_Ministry_of_Energy:0 "Establish the Ministry of Energy"
 
   PB_RUS_Expand_Area_Zero_Funding:0 "Expand Area Zero Funding"
@@ -606,7 +610,7 @@
   PB_RUS_The_Embodiment_of_Christ:0 "he Embodiment of Christ"
 
   PB_RUS_Addressing_the_world:0 "Addressing the World"
-  PB_RUS_Peninsular_Security:0 "Penninsular Security"
+  PB_RUS_Peninsular_Security:0 "Peninsular Security"
   PB_RUS_Enforce_Containment_Policy:0 "Containment Policy"
   PB_RUS_Contain_Zhongyings_forces:0 "Contain Zhongying's Forces"
   PB_RUS_Support_Norwegian_Independence:0 "Support Norwegian Independence"
