--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -383,6 +383,10 @@
 
  dependencies_x:0 "Is allowed to research this tech"
  dependencies_clone_troopers:0 "Has Completed the Associated Special Project"
+ dependencies_primordimorphs:0 "Has Completed the Associated Area Zero Project"
+
+ special_project_primordiform:0 "Primordiform Amalgamates"
+ special_project_primordiform_desc:0 "Traditionally, primates or primate adjacent species are avoided when mixing genetics. Frankly this is short-sighted and unimaginative, and thus the Primordiform was born. An unholy union of ape, human and mutated DNA, these armed creatures are exceptional shock cavalry."
 
  clone_vats_archetype:0 "Replicated Biomass"
  clone_vats_archetype_desc:0 "The dream of any military is a soldier who is willing to accept any order without question. With modern science, we can achieve this dream, at least to some extent. Replicoids are functionally lobotomized of higher brain functions, but they retain enough intelligence to follow any order, no matter how ridiculous.\n\nWith this, we can supplement divisions with disposable lobotomites and focus on a higher quality core military."
