I will finish this tomorrow too eepy

--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -27,6 +27,7 @@
 
   PM_AME_American_Acadiana_Binding:0 "Binding Acadia to America"
   PM_AME_American_Acadiana_Binding_desc:0 "Acadia will always stay in our sphere of influence ... and maybe even more"
+  PM_AME_American_East_Africa_Binding:0 "Binding East Africa to America"
 
   PM_ENG_Promote_Anglo_Irish_Unity:0 "Promote Anglo-Irish Unity"
   PM_ENG_Trade_with_Quebec:0 "Offer Economic Incentives To Quebec"
@@ -304,8 +305,40 @@
   PB_ImpMan_Increase_ACD_AME_Influence_tt:0 "Acadia will become more §bAmerican Aligned§!"
   PB_ImpMan_Increase_ACD_ENG_Influence_tt:0 "Acadia will become more §rBritish Aligned§!"
 
+  ENG_IRE_Blocked_tt:0 "§rBritian§! will be §Rblocked§! from further influencing Ireland"
+  ENG_IRE_Blocked_explain_tt:0 "§YNot:§! Ireland is §Rbound§! to §bAmerica§!"
+
+  ENG_QUE_Blocked_tt:0 "§rBritian§! will be §Rblocked§! from further influencing Quebec"
+  ENG_QUE_Blocked_explain_tt:0 "§YNot:§! Quebec is §Rbound§! to §bAmerica§!"
+
+  ENG_BCL_Blocked_tt:0 "§rBritian§! will be §Rblocked§! from further influencing the Northwest Territories"
+  ENG_BCL_Blocked_explain_tt:0 "§YNot:§! The Northwest Territories are §Rbound§! to §bAmerica§!"
+
+  ENG_WAF_Blocked_tt:0 "§rBritian§! will be §Rblocked§! from further influencing Carnegia"
+  ENG_WAF_Blocked_explain_tt:0 "§YNot:§! Carnegia is §Rbound§! to §bAmerica§!"
+
+  ENG_VIC_Blocked_tt:0 "§rBritian§! will be §Rblocked§! from further influencing Victoria"
+  ENG_VIC_Blocked_explain_tt:0 "§YNot:§! Victoria is §Rbound§! to §bAmerica§!"
+
+  ENG_HNK_Blocked_tt:0 "§rBritian§! will be §Rblocked§! from further influencing the Pearl River Dominion"
+  ENG_HNK_Blocked_explain_tt:0 "§YNot:§! The Pearl River Dominion is §Rbound§! to §bAmerica§!"
+
+  ENG_BAF_Blocked_tt:0 "§rBritian§! will be §Rblocked§! from further influencing the British African Authority"
+  ENG_BAF_Blocked_explain_tt:0 "§YNot:§! The British African Authority is §Rbound§! to §bAmerica§!"
+
+  ENG_BEF_Blocked_tt:0 "§rBritian§! will be §Rblocked§! from further influencing the East African Administration"
+  ENG_BEF_Blocked_explain_tt:0 "§YNot:§! The East African Administration is §Rbound§! to §bAmerica§!"
+
   ENG_ACD_Blocked_tt:0 "§rBritian§! will be §Rblocked§! from further influencing Acadia"
   ENG_ACD_Blocked_explain_tt:0 "§YNot:§! Acadia is §Rbound§! to §bAmerica§!"
+
+
+
+  ImpManagement_Bef_80_tt:0 "East African Alignment is greater then §b80%§!"
+
+  ImpManagement_Acd_80_tt:0 "Acadian Alignment is greater then §b80%§!"
+
+
 
   AME_Impending_Imperial_Civil_War_tt:0 "A series of events will fire which will eventually kickstart the §RImperial Civil War§!.\n\nAmerican aligned states will form a counter faction against Britain, America only needs to secure the eastern seaboard and hold out for one year for a scripted peace to fire, alternatively America can invade Britain where should they be succesful they can demand additional territories."
 
