Prussian MIO thx Cypher :heart:

--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -458,6 +458,15 @@ PB_ENG_ICAS:0 "Imperial Coal & Steel"
 PB_ENG_English_Electric:0 "EIEC - London"
 PB_ENG_IBC:0 "Imperial Broadcasting Corporation"
 ENG_vulcan_foundry_organization:0 "Vulcan Foundry"
+PRS_Brummer_Organisation:0 "Brummer Fabrik"
+PRS_Royal_Konig_Organisation:0 "Royal Königsberg Armoury"
+PRS_Danzig_Waffen_Organisation:0 "Danzig Waffenschmiede"
+PRS_Stower_Organisation:0 "Stoewer"
+PRS_Schichau_Organisation:0 "Schichau-Werke"
+PRS_albatros_organization:0 "Albatros Flugzeugwerke"
+PRS_werft_organization:0 "Werft zu Danzig"
+PRS_argus_organization:0 "Argus Bomber"
+PRS_nag_organization:0 "Neue Automobil Gesellschaft"
 
 ##########################
 # GERMANY - COLLAB AND LOYALIST
@@ -510,6 +519,8 @@ PB_AME_Maynard_Rifling:0 "Maynard Rifling Incorporated"
 PB_AME_Sharps_Rifle_Company:0 "Sharps Rifle Company"
 PB_AME_Winchester_Rifles:0 "Winchester Arms Association"
 AME_wpfp_arsenal_organization:0 "West Point Foundry"
+AME_curtiss_organization:0 "Curtiss Aeroplane Company"
+AME_tri_industries_organization:0 "Tri Industries"
 PB_AME_Vickers_American:0 "Vickers-Armstrong"
 PB_AME_Maxwell_Motors:0 "Maxwell-Chrysler"
 PB_AME_Ford_Company:0 "Ford Motor Company"
