Russia Post-War Stuff

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -1149,6 +1149,15 @@
   PBNews.289.d:0 "Following the dissolution of the Galician Occupation government, Russia has chosen to approach the Polish autonomy and offer them territorial concessions. Under what is being called the Krakow Award, the Polish Autonomy has been granted control of the former territories of Galicia.\n\nShocked crowds celebrate across Poland and Galicia, as Poland regains territories once thought permanently lost after the failure of the First National Awakening."
   PBNews.289.a:0 "Greater Poland, within the Empire?"
 
+  PBNews.291.t:0 "RUSSIA LEAVES THE PACTE"
+  PBNews.291.d:0 ""
+  PBNews.291.a:0 "An iron curtain descends on Europe."
+  PBNews.291.b:0 "Who said they could leave?!"
+
+  PBNews.292.t:0 "RUSSIAN INVASION OF IRAN"
+  PBNews.292.d:0 ""
+  PBNews.292.a:0 "The bear trades blood for oil."
+
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
