--- a/localisation/english/PB_war_l_english.yml
+++ b/localisation/english/PB_war_l_english.yml
@@ -93,3 +93,6 @@ WAR_NAME_SIK_XSM:0 "The Western Plains War"
 WAR_NAME_XSM_SIK:0 "The Western Plains War"
 WAR_NAME_SIK_KUM:0 "The Western Plains War"
 WAR_NAME_KUM_SIK:0 "The Western Plains War"
+
+WAR_NAME_RUS_PER:0 "The Russian Invasion of Iran"
+WAR_NAME_PER_RUS:0 "The Russian Invasion of Iran"
