--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -1152,7 +1152,7 @@
   PBNews.291.t:0 "RUSSIA LEAVES THE PACTE"
   PBNews.291.d:0 ""
   PBNews.291.a:0 "An iron curtain descends on Europe."
-  PBNews.291.b:0 "Who said they could leave?!"
+  PBNews.291.b:0 "They can't do that! Stop them or something!"
 
   PBNews.292.t:0 "RUSSIAN INVASION OF IRAN"
   PBNews.292.d:0 ""
