--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -433,10 +433,6 @@
   Russian_Flavour.5.d:0 ""
   Russian_Flavour.5.a:0 "Submarines are cool."
 
-  postwar_russia.1.t:0 "Russia leaves the Pacte"
-  postwar_russia.1.d:0 ""
-  postwar_russia.1.a:0 "They can't do that! Stop them... or something!"
-
   postwar_russia.2.t:0 "Russia demands our oil!"
   postwar_russia.2.d:0 ""
   postwar_russia.2.a:0 "Do we even have a choice?"
@@ -1080,7 +1076,7 @@
   PB_RUS_Form_Tsargrad_Accords:0 "We, alongside all of our puppets and allies, will §Rleave the Pacte Revanchiste§! and §Gform the Tsargrad Accords.§!"
   PB_RUS_PER_Oil_Or_War_tt:0 "We will demand §Yresource rights to Iranian oil!§! If they refuse, then we will §Rinvade.§!"
   PB_RUS_Invasion_Iran_Timer:0 "Iran has §Rrefused§! our demands! We will have §Ythree weeks§! to prepare for our §Yinvasion§! of the country."
-  PB_RUS_African_Opportunity_tt:0 "The §YEmpire of East Africa§! will §Rinvade§! its neigboring states of §YKenya, Buganda, and the East African Federation§!!"
+  PB_RUS_African_Opportunity_tt:0 "§YUnlocks§! £decision_icon_small decisions for the §YEmpire of East Africa§! to §Rinvade§! its neigboring states of §YKenya, Buganda, and the East African Federation§!!"
 
   #######################
   # PARTIES
