Some Prussian Focus Loc

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -691,11 +691,11 @@
   PB_PRS_Restore_The_Houses:0 "Restore The Houses"
   PB_PRS_Restore_The_Houses_desc:0 " Bouhler's stunt has left many of our fellow aristocrats without their rightful authority. Now that we are back in control, we should move to restore our peers in the nobility their God-given rights."
   PB_PRS_Venerate_The_Old:0 "Venerate The Old"
-  PB_PRS_Venerate_The_Old_desc:0 ""
+  PB_PRS_Venerate_The_Old_desc:0 "Even in spite of the young blood's clamoring for democracy and liberalization, we of the old guard have seen what allowing such things can do to a nation. In France, democracy was destroyed by Doriot and his FPF. In Mexico, the military and the emperor there broke what little remains of liberty. Even here, in Prussia, we have seen what happens, with Bouhler's coup shattering Prussia's nascent democracy before he was ousted and we returned. Only we, the Junkers, can run Prussia. And so we shall, come what may."
   PB_PRS_Continue_The_Aristroctatic_Legacy:0 "Continue The Aristroctatic Legacy"
-  PB_PRS_Continue_The_Aristroctatic_Legacy_desc:0 ""
+  PB_PRS_Continue_The_Aristroctatic_Legacy_desc:0 "ur legacy is a long one. We have led Prussia through the years through many trials and tribulations.  We will adjust some aspects of Prussian life to ensure that our legacy remains as is, no matter the grumbling of the lesser man who does not have the same power as we hold. It is only right that we keep it that way."
   PB_PRS_The_Nobles_Due:0 "The Nobles Due"
-  PB_PRS_The_Nobles_Due_desc:0 ""
+  PB_PRS_The_Nobles_Due_desc:0 "Everyone has their parts to play and dues to pay in life. We Junkers are no exception to that rule. For the safety and security of our homeland, each Junker shall give a small portion of their wealth to Prussia for use in its development. It is our due to the nation and to the people we protect."
   PB_PRS_Mobilize_The_New_Blood:0 "Mobolize The New Blood"
   PB_PRS_Mobilize_The_New_Blood_desc:0 "We will not be around forever, that is a fact. As the Old Guard die off, more and more of the younger Junkers will take their place, and with them come their ideas of liberty. We should lean more on them as they come to prominence and enshrine their ideas into Prussia itself."
   PB_PRS_A_New_Path:0 "A New Path"
@@ -705,11 +705,11 @@
   PB_PRS_Promote_Shared_Heritage:0 "Promote Shared Heritage"
   PB_PRS_Promote_Shared_Heritage_desc:0 "The Prussian and the Pole, two peoples living in the same lands that have been at each others throats for centuries. This is no exception, but we must not let this continue. In spite of our history with one another as well as our language and religious differences, we share the same heritage, and we must make the world know of it. The Poles shall be equal to the Prussians in our shared realm, they shall be able to speak their tongue and observe their Catholic practices freely. We are brethren, and it is time we act like it."
   PB_PRS_Revert_The_Great_Rot:0 "Revert The Great Rot"
-  PB_PRS_Revert_The_Great_Rot_desc:0 ""
+  PB_PRS_Revert_The_Great_Rot_desc:0 "Much of the military is still tainted with the smell of Bouhler's influence, we must finally address this issue once and for all.\n\nBy undergoing rigorous structural reform in all branches of the Royal Army can we root our this cancer from our system and restore a sence of pride to a currently ailing military. "
   PB_PRS_A_Just_Hand:0 "A Just Hand"
-  PB_PRS_A_Just_Hand_desc:0 ""
+  PB_PRS_A_Just_Hand_desc:0 "Not all of Bouhler's ideas were idiotic, his reforms regarding military operations were beneficial in promoting a disciplined and effective fighting core for our main army. By granting some prussian higher ups amnesty for continued service we will be able to see the continued reform of the armed forces into an elite fighting force. "
   PB_PRS_Reeducation_Efforts:0 "Re-education Efforts"
-  PB_PRS_Reeducation_Efforts_desc:0 ""
+  PB_PRS_Reeducation_Efforts_desc:0 "Doctrinal realignments are still neccesary to root out the most fanatic of Bouhler's military supporters, whilst not as harsh as we had once planned we cannot let neo-imperialist ideology find comfort within our military."
   PB_PRS_The_New_Guard:0 "The New Guard"
   PB_PRS_The_New_Guard_desc:0 ""
   PB_PRS_Not_A_Stone_Unturned:0 "Not A Stone Unturned"
@@ -803,27 +803,21 @@
   PB_PRS_Rescind_Anti_Jewish_Laws:0 "Rescind Anti-Jewish Laws"
   PB_PRS_Rescind_Anti_Jewish_Laws_desc:0 "One of the earliest laws passed by Bouhler's regime had to do with the status of Prussia's Jewish population. Whilst most have since left Prussia there still remains a few hundred that had decided to stay despite Bouhler's anti-semitic rhetoric. We must do away with this nonsense laws and welcome back these people."
   PB_PRS_The_Last_One_Standing:0 "The Last One Standing"
-  PB_PRS_The_Last_One_Standing_desc:0 ""
+  PB_PRS_The_Last_One_Standing_desc:0 "Our German brethen have fallen against the tides of revanchism, with their fall our imminent collapse is likely. If we wish to secure save all that we have achieved and ensure the survival of the Prussian people then we must prepare ourselves for the long road ahead. The days will be long and the nights will be restless but if we can last long enough to see the Prussian flag fly over Paris and St. Petersburg then we would have done our part in securing a safer and better Europe. "
   PB_PRS_David_And_Goliath:0 "David And Goliath"
-  PB_PRS_David_And_Goliath_desc:0 ""
+  PB_PRS_David_And_Goliath_desc:0 "The odds are stacked against us, our enemy holds every conceivable advantage in their hand. May god watch over our souls because we are going to need one help of a miracle to make it through this hellish war."
   PB_PRS_Emergency_War_Time_Measures:0 "Emergency War Time Measures"
-  PB_PRS_Emergency_War_Time_Measures_desc:0 ""
+  PB_PRS_Emergency_War_Time_Measures_desc:0 "With the 2nd Great War in full swing we must put a pause to the normal civilian operations of the state and fully focus ourselves to the war effort. Every man, women, and child must do their part to ensure the survival of our state and the legacy of the Prussian people."
   PB_PRS_Establish_Contacts_In_Occupied_Germany:0 "Establish Contacts In Occupied Germany"
-  PB_PRS_Establish_Contacts_In_Occupied_Germany_desc:0 ""
+  PB_PRS_Establish_Contacts_In_Occupied_Germany_desc:0 "The Pacte occupied territories of Germany are vast, and amongst the many homes of the german citizen stands many loyal patriots willing to do their part to rid Europe of this vile extremist disease, we must fill their hearts with a great cause and supply them with the materials neccesary for insurrection."
   PB_PRS_Annihilation_Of_The_Self:0 "Annihilation Of The Self"
-  PB_PRS_Annihilation_Of_The_Self_desc:0 ""
+  PB_PRS_Annihilation_Of_The_Self_desc:0 "We have given much already in the way of sacrifices for this damn war, unfortunately there is always more that can be done in the pursuit of victory. We will dig our trenches deeper, sharpen our bayonets, and prepare ourselves for more years of war, but it will be worth it all in the end, right?"
   PB_PRS_Total_Defense:0 "Total Defense"
-  PB_PRS_Total_Defense_desc:0 ""
-  PB_PRS_Savage_Resistance:0 "Savage Resistance"
-  PB_PRS_Savage_Resistance_desc:0 ""
+  PB_PRS_Total_Defense_desc:0 "Let us erect mighty structures to repel any advancing armies we may face. No matter how big their guns are or how many of them there may be we will keep them at bay with guns and concrete. "
   PB_PRS_Request_Scandinavian_Arms:0 "Request Scandinavian Arms"
-  PB_PRS_Request_Scandinavian_Arms_desc:0 ""
-  PB_PRS_The_Pactes_Last_Conquest:0 "The Pacte's Last Conquest"
-  PB_PRS_The_Pactes_Last_Conquest_desc:0 ""
-  PB_PRS_Restore_The_Kingdoms:0 "Restore The Kingdoms"
-  PB_PRS_Restore_The_Kingdoms_desc:0 ""
+  PB_PRS_Request_Scandinavian_Arms_desc:0 "The countries of Scandinavia will soon too face the wrath of France and Russia, till then it is vital that we are able to fend of these invading armies to give our allies abroad time to prepare and eventually respond."
   PB_PRS_Germany_United:0 "Germany United"
-  PB_PRS_Germany_United_desc:0 ""
+  PB_PRS_Germany_United_desc:0 "It is done, our months spent defending against superior foes were not in vein, we have managed to convince much of the German army in exile that we are in fact the true heirs of their now dying empire. Let us welcome those once done wrong by our mortal enemies, and both German and Prussian shall walk into the rest of the century not as foe, but as brothers."
   
 
 
