Russian Battle Priests!!!

--- a/localisation/english/unit_l_english.yml
+++ b/localisation/english/unit_l_english.yml
@@ -374,6 +374,8 @@
  clone_troopers_desc:0 "Lobotomized Combat Teams, Disposable"
  cowboys:0 "Gunslingers"
  cowboys_desc:0 "Specialized Western Forces, Yee and Haw included"
+ battle_priest:0 "Battle Priests"
+ battle_priest_desc:0 "For when you need to wage war, but you don't want God to wag his finger about you killing that other tribe."
  recon:1 "Cavalry Recon Detachment"
  recon_desc:0 "Sending smaller groups to scout ahead before moving in the main force allows us to gather intelligence about where the enemy is and how many we are facing."
  mot_recon:0 "Motorized Recon Company"
