--- a/localisation/english/PB_Game_Rules_l_english.yml
+++ b/localisation/english/PB_Game_Rules_l_english.yml
@@ -1,12 +1,20 @@
 ﻿l_english:
 
-  RULE_GROUP_AI_PATHS:0 "AI Paths"
-  RULE_OPTION_DEFAULT:0 "Default AI"
+  RULE_GROUP_AI_PATHS:0 "Country Paths"
+  RULE_OPTION_DEFAULT:0 "Random Path"
   RULE_OPTION_RANDOM_CHOICE:0 "The AI will go with a random path"
-  PB_FRENCH_PATH_CHOICE:0 "@FRA French AI Strategy"
-  PB_FRENCH_PATH_CHOICE:0 "@FRA French AI Strategy"
-  PB_GERMAN_PATH_CHOICE:0 "@GER German AI Strategy"
-  PB_BRITISH_PATH_CHOICE:0 "@ENG British AI Strategy"
+  PB_FRENCH_PATH_CHOICE:0 "@FRA French Paths"
+  PB_FRENCH_PATH_CHOICE:0 "@FRA French Paths"
+  PB_GERMAN_PATH_CHOICE:0 "@GER German Paths"
+  PB_BRITISH_PATH_CHOICE:0 "@ENG British Paths"
+  PB_SCA_FORMATION_CHOICE:0 "@SCA @AME Formation of the SCA"
+  PB_SCA_PATH_CHOICE:0 "@SCA Second Continental Army's Paths"
+  PB_AMERICAN_PATH_CHOICE:0 "@AME American Paths"
+  PB_IMPERIAL_CIVIL_WAR_CHOICE:0 "@AME @ENG Imperial Civil War"
+  PB_POST_ICW_AMERICAN_PATH_CHOICE:0 "@AME American Post-ICW Paths"
+  PB_PRUSSIAN_PATH_CHOICE:0 "@PRS Prussian Paths"
+  PB_RUSSIAN_PATH_CHOICE:0 "@RUS Russian Paths"
+  PB_FRANCO_RUSSIAN_WAR_CHOICE:0 "@FRA @RUS Franco-Russian War"
 
   RULE_GROUP_SPECIAL:0 "Special Event Rules"
   PB_HALLOWEEN_ENABLE:0 "Enable 2023 Halloween Event Content"
@@ -24,3 +32,47 @@
   2023_Halloween_Content_Easy_Difficulty_desc:0 "The Martian Invasion will spawn with no buffs."
   2023_Halloween_Content_High_Difficulty_DESC:0 "The Martian Invasion will spawn with significant buffs."
   2023_Halloween_Content_Normal_Difficulty_DESC:0 "The Martian Invasion will spawn with some limited buffs."
+
+  RULE_OPTION_SCA_DOESNT_FORM:0 "The Art of the Deal"
+  RULE_OPTION_SCA_DOESNT_FORM_DESC:0 "Coolidge negotiates with the Bonus Brigade and the Second Continental Army does not form."
+  RULE_OPTION_SCA_FORMS:0 "The Dead March West"
+  RULE_OPTION_SCA_FORMS_DESC:0 "Coolidge violently crushes the Bonus Brigades and Butler leads the Second Continental Army out west."
+  RULE_OPTION_SCA_BUTLER_PATH:0 "Sic Semper Tyrannis"
+  RULE_OPTION_SCA_BUTLER_PATH_DESC:0 "§RThis Requires 'The Dead March West' in '@SCA @AME Formation of the SCA'§!\n\nButler will seize total control of the Second Continental Army and go on to form the §YNorth American Union§!"
+  RULE_OPTION_SCA_CONGRESS_PATH:0 "By the People, for the People"
+  RULE_OPTION_SCA_CONGRESS_PATH_DESC:0 "§RThis Requires 'The Dead March West' in '@SCA @AME Formation of the SCA'§!\n\nCongress will seize total control of the Second Continental Army and go on to form the §YUnited States§!"
+  RULE_OPTION_AME_STATESOC_PATH:0 "Vox Populi"
+  RULE_OPTION_AME_STATESOC_PATH_DESC:0 "§RThis Requires 'The Dead March West' in '@SCA @AME Formation of the SCA'§!\n\nFollowing the Automation Crisis, the National Workman’s Party will be elected and begin to implement socialism in the United Commonwealth."
+  RULE_OPTION_AME_LIBERAL_PATH:0 "Gazing Over the Horizon"
+  RULE_OPTION_AME_LIBERAL_PATH_DESC:0 "Following the Automation Crisis, the Progress Party will be elected and begin to implement socialism in the United Commonwealth."
+  RULE_OPTION_AME_CONSERVATIVE_PATH:0 "The Legacy of Silent Cal"
+  RULE_OPTION_AME_CONSERVATIVE_PATH_DESC:0 "Following the Automation Crisis, the Federal Unionist Party will be re-elected and begin to renew the United Commonwealth from its rot."
+  RULE_OPTION_AME_SOCRED_PATH:0 "One Step Forward, Two Steps Back"
+  RULE_OPTION_AME_SOCRED_PATH_DESC:0 "§RThis Requires 'The Art of the Deal' in '@SCA @AME Formation of the SCA'§!\n\nFollowing the Automation Crisis, the Social Credit Party will be elected and move towards a social credit paradise."
+  RULE_OPTION_IMPERIAL_CIVIL_WAR_AVOIDED:0 "The Marraige of Britain and America"
+  RULE_OPTION_IMPERIAL_CIVIL_WAR_AVOIDED_DESC:0 "America and Britain will lower Imperial Tension as much as possible and avoid the Imperial Civil War."
+  RULE_OPTION_IMPERIAL_CIVIL_WAR_OCCURS:0 "The Great Divorce"
+  RULE_OPTION_IMPERIAL_CIVIL_WAR_OCCURS_DESC:0 "America and Britain will increase Imperial Tension as much as possible and will tear the Empire apart."
+  RULE_OPTION_AME_KINGDOM_PATH:0 "Tyranny with a New Face"
+  RULE_OPTION_AME_KINGDOM_PATH_DESC:0 "§RThis Requires 'The Great Divorce' in '@AME @ENG Imperial Civil War Likelihood'§!\n\nFollowing the Imperial Civil War, the United Commonwealth will transition to a monarchy."
+  RULE_OPTION_AME_REPUBLIC_PATH:0 "The American Experiment"
+  RULE_OPTION_AME_REPUBLIC_PATH_DESC:0 "§RThis Requires 'The Great Divorce' in '@AME @ENG Imperial Civil War Likelihood'§!\n\nFollowing the Imperial Civil War, the United Commonwealth will transition to a republic."
+  RULE_OPTION_FRANCO_RUSSIAN_WAR:0 "Operation Charlemagne"
+  RULE_OPTION_FRANCO_RUSSIAN_WAR_DESC:0 "France will reject all of Russia's demands at the Prague Conference, leading to war breaking out between the French and Russian spheres."
+  RULE_OPTION_FRANCO_RUSSIAN_SPLIT:0 "The Iron Curtain"
+  RULE_OPTION_FRANCO_RUSSIAN_SPLIT_DESC:0 "France will reject one of Russia's demands at the Prague Conference, leading a split of the Pacte Revanchiste between the French and Russian spheres."
+  RULE_OPTION_FRANCO_RUSSIAN_ALLIANCE:0 "The Pact of Roses"
+  RULE_OPTION_FRANCO_RUSSIAN_ALLIANCE_DESC:0 "France will reject none of Russia's demands at the Prague Conference, leading a preservation of the Pacte Revanchiste and the warming of Franco-Russian relations."
+  
+  # I'll add (better) descs once the content is fully complete and polished
+  RULE_OPTION_PRS_NEOIMP_PATH:0 "WIP Neo-Imp Prussia"
+  RULE_OPTION_PRS_NEOIMP_PATH_DESC:0 "WIP Neo-Imp Prussia"
+  RULE_OPTION_PRS_ANLIB_PATH:0 "WIP An-Lib Prussia"
+  RULE_OPTION_PRS_ANLIB_PATH_DESC:0 "WIP An-Lib Prussia"
+  RULE_OPTION_RUS_COSMISTS_PATH:0 "To Infinity and Beyond"
+  RULE_OPTION_RUS_COSMISTS_PATH_DESC:0 "Olga will become Tsarina and the Cosmist faction of Russia will be empowered." 
+  RULE_OPTION_RUS_MOSCOW_CIRCLE_PATH:0 "Russia's Darkest Night"
+  RULE_OPTION_RUS_MOSCOW_CIRCLE_PATH_DESC:0 "The Moscow Circle will coup the government."
+  RULE_OPTION_RUS_DEMOCRATS_PATH:0 "The Russian People Speak"
+  RULE_OPTION_RUS_DEMOCRATS_PATH_DESC:0 "Russia will continue its path down the road to democracy."
+  
