two word edit bc i was being a dum dum

--- a/localisation/english/PB_Game_Rules_l_english.yml
+++ b/localisation/english/PB_Game_Rules_l_english.yml
@@ -54,9 +54,9 @@
   RULE_OPTION_IMPERIAL_CIVIL_WAR_OCCURS:0 "The Great Divorce"
   RULE_OPTION_IMPERIAL_CIVIL_WAR_OCCURS_DESC:0 "America and Britain will increase Imperial Tension as much as possible and will tear the Empire apart."
   RULE_OPTION_AME_KINGDOM_PATH:0 "Tyranny with a New Face"
-  RULE_OPTION_AME_KINGDOM_PATH_DESC:0 "§RThis Requires 'The Great Divorce' in '@AME @ENG Imperial Civil War Likelihood'§!\n\nFollowing the Imperial Civil War, the United Commonwealth will transition to a monarchy."
+  RULE_OPTION_AME_KINGDOM_PATH_DESC:0 "§RThis Requires 'The Great Divorce' in '@AME @ENG Imperial Civil War'§!\n\nFollowing the Imperial Civil War, the United Commonwealth will transition to a monarchy."
   RULE_OPTION_AME_REPUBLIC_PATH:0 "The American Experiment"
-  RULE_OPTION_AME_REPUBLIC_PATH_DESC:0 "§RThis Requires 'The Great Divorce' in '@AME @ENG Imperial Civil War Likelihood'§!\n\nFollowing the Imperial Civil War, the United Commonwealth will transition to a republic."
+  RULE_OPTION_AME_REPUBLIC_PATH_DESC:0 "§RThis Requires 'The Great Divorce' in '@AME @ENG Imperial Civil War'§!\n\nFollowing the Imperial Civil War, the United Commonwealth will transition to a republic."
   RULE_OPTION_FRANCO_RUSSIAN_WAR:0 "Operation Charlemagne"
   RULE_OPTION_FRANCO_RUSSIAN_WAR_DESC:0 "France will reject all of Russia's demands at the Prague Conference, leading to war breaking out between the French and Russian spheres."
   RULE_OPTION_FRANCO_RUSSIAN_SPLIT:0 "The Iron Curtain"
