Russia Post-War Stuff

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -142,7 +142,8 @@ PB_Culture_Ruthenian_tt:0 "Ruthenian"
 # ASIA-MINOR #
 
 PB_Culture_Turkish_tt:0 "Turkish" 
-PB_Culture_Stamboul_tt:0 "Stamboul" 
+PB_Culture_Stamboul_tt:0 "Stamboul"
+PB_Culture_Anatolian_tt:0 "Anatolian"
 
 # Russia #
 
@@ -508,6 +509,7 @@ PB_Culture_Ruthenian_tt_delayed:0 "An elusive people that call the eastern Carpa
 
 PB_Culture_Turkish_tt_delayed:0 "" 
 PB_Culture_Stamboul_tt_delayed:0 "" 
+PB_Culture_Anatolian_tt_delayed:0 ""
 
 # RUSSIA #
 
