--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -181,6 +181,7 @@
   PB_RUS_Completed_Trans_Alaskan_Pipeline:0 "Trans-American Oil Pipeline - Completed"
 
   PB_Idea_Establish_Ministry_Energy:0 "Ministry of Energy"
+  PB_Idea_Japanese_War_Reparations:0 "War Reparations"
 
   ##########################
   # EVENTS
