i forgot that difficulty sliders existed tbh

--- a/localisation/english/PB_Game_Rules_l_english.yml
+++ b/localisation/english/PB_Game_Rules_l_english.yml
@@ -76,3 +76,8 @@
   RULE_OPTION_RUS_DEMOCRATS_PATH:0 "The Russian People Speak"
   RULE_OPTION_RUS_DEMOCRATS_PATH_DESC:0 "Russia will continue its path down the road to democracy."
   
+  # technically not game rules but whatev
+  custom_diff_strong_sca:0 "Strengthen Second Continental Army"
+  custom_diff_strong_ame:0 "Strengthen United Commonwelath"
+  custom_diff_strong_rus:0 "Strengthen Russia"
+  custom_diff_strong_prs:0 "Strengthen Prussia"
